@@ -165,6 +165,7 @@
 
 [ 0 27]
 
+0
 2.6776858460184521884180352812357212922
 -1
 2.4789169415611595631185019889765914992
@@ -190,4 +191,4 @@
 -1
 0
 -128
-Total time spent: 1948
+Total time spent: 3348
